@@ -1,4 +1,7 @@
 SUBDIRS = m4 Other_packages Lib Applications
 ACLOCAL_AMFLAGS = -I m4
 
-EXTRA_DIST = config.rpath  mkinstalldirs  config.rpath xmippConfiguration.inc
+EXTRA_DIST = config.rpath  config.rpath  mkinstalldirs  config.rpath xmippConfiguration.inc
+
+docs:
+	( cd Lib ; make docs )
